--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <h2 class="desc">Ph.D. Scholar</h2>
 		<h2 class="desc">Indian Institute of Technology Guwahati, India</h2>     
                 <ul class="social list-inline">   
-                    <li><a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/Alakesh1025/"><i class="fa fa-github-alt"></i></a></li>                               
+                    <li><a href="https://www.linkedin.com/in/alakesh-kalita-39447055/"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/Alakesh1025/"><i class="fa fa-github-alt"></i></a></li>    
+		    <li><a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en"><i class="fa fa-google-plus"></i></a></li>
                 </ul> 
             </div><!--//profile-->
            <a class="btn btn-cta-primary pull-right" href="CV.pdf" target="_blank"><i class="fa fa-paper-plane"></i> Download CV</a>   
