--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="content">
                             <div class="item" >
                                 <ul>
-				    <li><p class="subDetails">An active volunteer of in the organizing committee of the 3$^{rd}$ ISEA International Conference on Security and Privacy (ISEA-ISAP 2020) in IIT Guwahati from 27 Feb - 1 Mar 2020 </p></li>
+				    <li><p class="subDetails">An active volunteer of in the organizing committee of the 3rd ISEA International Conference on Security and Privacy (ISEA-ISAP 2020) in IIT Guwahati from 27 Feb - 1 Mar 2020 </p></li>
 				  <li><p class="subDetails">An active member of organizing committee in two days workshop on "Internet of Things: It’s Inside Out" at NEHU, Shillong, Meghalaya from 12 May - 13 May, 2017</p></li>
 				  <li><p class="subDetails">Faculty Development Programme (FDP) in “Cloud Computing with AWS : in association with
 					IIIT Guwahati , oraganized by E&ICT Academy” at IIIT Guwahati from 05 Dec - 10 Dec, 2016</p></li>
@@ -231,7 +231,8 @@
                         <div class="content">
                             <div class="item" >
                                 <ul>
-				  <li><p class="subDetails">Received Travel grant to attend COMSNETS’2019 conference</p></li>
+				  <li><p class="subDetails">Received Travel grant to attend ICDCN’2020 conference from IIT Guwahati</p></li>
+				  <li><p class="subDetails">Received Travel grant to attend COMSNETS’2019 conference from conference organizer</p></li>
 				  <li><p class="subDetails">MHRD Scholarship for Ph.D (2018-till)</p></li>
 				  <li><p class="subDetails">Bagged second prize in Regional Innovators Conclave conducted by Government of Meghalaya for
 					the SMART LIGHTING MODEL, Meghalaya, India 2017</p></li>
@@ -251,7 +252,7 @@
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
                     <div class="section-inner">
-                        <h2 class="heading sr-only">Basic Information</h2>
+                         <h2 class="heading">Contact me</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>CSE Dept., IIT Guwahati, India, 783392</li>
