--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <li><a href="index.html#wor">Work Experience</a></li>
       <li><a href="index.html#wt">Workshop & Training</a></li>
       <li><a href="index.html#ach">Achievements</a></li>
-      <li><a href="index.html#abt">Contact me</a></li>
+      <li><a href="index.html#con">Contact me</a></li>
     </ul>
  </div> 
     <div class="container sections-wrapper">
@@ -251,7 +251,7 @@
 </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
-                    <div class="section-inner">
+                    <div class="section-inner" id="con">
                          <h2 class="heading">Contact me</h2>
                         <div class="content">
                             <ul class="list-unstyled">
