--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         		    <p>It's been more than 3 years, I'm working in the field of Internet of Things. Back in 2016, I worked in an indian government sponsored project titlled "Quality of Service Provisioning in Internet of Things" as a research scientist. Later, in 2017, I worked in Internet of Vehicle in IIIT Guwahati, and currently, I'm working in Industrial Internet of Things. The main topic of my research is "Adaptive resource allocation for faster formation of 6TiSCH network."</p>
 				
                             <p>My research interest includes Internet of Things, Cloud computing, Software Defined Network, Blockchain</p> 
+			    <p><a class="btn btn-cta-primary" href="CV.pdf"<h4> CV</h4></a></p>	
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
