--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                          <h2 class="heading">Latest News</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                               <p class="blink blink-two">Paper with <b>Alakesh</b> accepted in <b>IEEE Transactions on Mobile Computing!</b></p>
-				<marquee behavior="up">Paper accepted in ICDCN'2020 </marquee>
-				<marquee behavior="up">Paper accepted in COMSNETS'2019 </marquee>
+				<span class="blinking">Paper accepted in <b>IEEE Transactions on Mobile Computing!</span>
+	    			<span class="blinking">Paper accepted in <b>Paper accepted in ICDCN'2020 </span>
+				
                                 
                             </ul>
                         </div><!--//content-->  
