--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                          <h2 class="heading">Latest News</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-				<span class="blinking">Paper accepted in <b>IEEE Transactions on Mobile Computing!</span>
-	    			<span class="blinking">Paper accepted in <b>Paper accepted in ICDCN'2020 </span>
+				<blink>Paper accepted in <b>IEEE Transactions on Mobile Computing!</blink>
+	    			<blink>Paper accepted in <b>Paper accepted in ICDCN'2020 </blink>
 				
                                 
                             </ul>
