--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                          <h2 class="heading">Latest News</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-				<blink>Paper accepted in <b>IEEE Transactions on Mobile Computing!</blink>
-	    			<blink>Paper accepted in <b>Paper accepted in ICDCN'2020 </blink>
+				<p>Paper accepted in <b>IEEE Transactions on Mobile Computing!</p>
+	    			<pPaper accepted in <b>Paper accepted in ICDCN'2020 </p>
 				
                                 
                             </ul>
