--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                          <h2 class="heading">Latest News</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-				<p>Paper accepted in <b>IEEE Transactions on Mobile Computing!</p>
-	    			<pPaper accepted in <b>Paper accepted in ICDCN'2020 </p>
+				<blink>Paper accepted in IEEE Transactions on Mobile Computing!</blink>
+	    			<blink>Paper accepted in Paper accepted in ICDCN'2020 </blink>
 				
                                 
                             </ul>
