--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
 				<p><blink>Paper accepted in IEEE Transactions on Mobile Computing</blink></p>
-	    			<p><blink>Paper accepted in Paper accepted in ICDCN'2020 </blink></p>
+	    			<p><blink>Paper accepted in ICDCN'2020 </blink></p>
 				
                                 
                             </ul>
