--- a/publication.html
+++ b/publication.html
@@ -139,8 +139,7 @@
 
 
 
-    
-    <header class="header">
+      <header class="header">
         <div class="container">  
 
 			  <div class="row">
@@ -157,6 +156,14 @@
             <ul class="nav navbar-nav">
 				      <li class="active"><a href="index.html" id="current">Home</a></li>
 				      <li ><a href="publication.html">Publications</a></li>
+				       <li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown">Academics
+					<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+					  <li><a href="education.html">Education</a></li>
+					  <li><a href="achieve.html">Achievements</a></li>
+					</ul>
+				      </li>
 				      <li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown">Experience
 					<span class="caret"></span></a>
@@ -165,7 +172,7 @@
 					  <li><a href="training.html">Workshop & Training</a></li> 
 					</ul>
 				      </li>
-				      <li><a href="achieve.html">Achievements</a></li>
+				     	
 				      <li><a href="contact.html">Contact me</a></li>
 				    </ul>
 				</nav>
@@ -232,7 +239,7 @@
   <!-- ******FOOTER****** --> 
   <footer class="footer">
     <div class="container text-center">
-            <small class="copyright"> Copyright@alakeshkalita2020</small>
+            <small class="copyright"> &copy;2020 Alakesh Kalita. </small>
     </div><!--//container-->
 </footer><!--//footer-->
  
