--- a/achieve.html
+++ b/achieve.html
@@ -48,9 +48,10 @@
 						 Email: alakesh.kalita1025@gmail.com<br>
 						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
-						 <a href="https://github.com/Alakesh1025/">GitHub </a>|<br>
+						 <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
+						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|<br>
 						 Ph: 8402802840<br>
-						 <a href="CV.pdf">[Download CV]</a></h5>
+						 [<a href="CV.pdf">Download CV</a>]</h5>
 			    </div><!--//profile-->
 			    </div>
 			    <div class="col-sm-6 col-md-7 col-lg-7">
