--- a/education.html
+++ b/education.html
@@ -97,9 +97,34 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item" >
-                                <ul>
 				    
-
+				 <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+                                <ul>
 
 				<li><p class="subDetails">
 					<h5>Indian Institute of Technology Guwahati, India</h5>
