--- a/education.html
+++ b/education.html
@@ -96,7 +96,7 @@
                     <div class="section-inner" id="wt">
                         <h2 class="heading">Education</h2>
                         <div class="content">
-                            <div class="item" >
+                            <div class="item"  class="table-responsive">
 				    
 				 <table class="table table-condensed">
     <thead>
