--- a/education.html
+++ b/education.html
@@ -96,34 +96,32 @@
                     <div class="section-inner" id="wt">
                         <h2 class="heading">Education</h2>
                         <div class="content">
-                            <div class="item"  class="table-responsive">
+                            <div class="item" >
 				    
-				 <table class="table table-condensed">
+				 <div class="table-responsive">          
+  <table class="table">
     <thead>
       <tr>
+        <th>#</th>
         <th>Firstname</th>
         <th>Lastname</th>
-        <th>Email</th>
+        <th>Age</th>
+        <th>City</th>
+        <th>Country</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>1</td>
+        <td>Anna</td>
+        <td>Pitt</td>
+        <td>35</td>
+        <td>New York</td>
+        <td>USA</td>
       </tr>
     </tbody>
   </table>
+  </div>
                                 <ul>
 
 				<li><p class="subDetails">
