--- a/education.html
+++ b/education.html
@@ -99,7 +99,7 @@
                             <div class="item" >
 				    
 				 <div class="table-responsive">          
-  				<table class="table">
+  				<table class="table table-striped table-sm" >
 				    <thead>
 				      <tr>
 					<th>#</th>
@@ -116,13 +116,13 @@
 					<td>2018-</td>
 				      </tr>
 				      <tr>
-					<td>1</td>
+					<td>2</td>
 					<td>Assam University, Silchar, India</td>
 					<td>M-Tech</td>
 					<td>2014-2016</td>
 				      </tr>
 				      <tr>
-					<td>1</td>
+					<td>3</td>
 					<td>DBCET, Guwahati, India</td>
 					<td>B-Tech</td>
 					<td>2008-2012</td>
