--- a/publication.html
+++ b/publication.html
@@ -118,7 +118,8 @@
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journal</span></h3>
 				<hr>
-                                <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Channel Condition Based Dynamic Beacon Interval for Faster Formation of 6TiSCH Network” in <b> IEEE Transaction on Mobile Computing, IF=4.47</b> (Accepted), March 2020, pp. 1-12, <a href="https://ieeexplore.ieee.org/document/9036988">Link</a></p></li>
+                                <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Channel Condition Based Dynamic Beacon Interval for Faster Formation of 6TiSCH Network” in <b> IEEE Transactions on Mobile Computing, IF=4.47</b> (Accepted), March 2020, pp. 1-12, <a href="https://ieeexplore.ieee.org/document/9036988">Link</a></p></li>
+				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Transmission of control packets for Faster Formation of 6TiSCH Network” in <b> ACM Transsactions on Internet of Things,</b> (Under Minor revision),</p></li>      
 			      </ol> 
 			      <ol class="gradient-list">
 				<h3> <span class="label label-default">Conferences</span></h3>
