--- a/index.html
+++ b/index.html
@@ -136,10 +136,7 @@
                          <h2 class="heading">Latest News</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-				<p><blink>Paper accepted in IEEE Internet of Things Journal</blink></p> 
-				<p><blink>Paper accepted in ACM Transactions on Internet of Things</blink></p>    
-				<p><blink>Paper accepted in IEEE Transactions on Mobile Computing</blink></p>		
-                   
+				<p style="color:red"> <blink>Paper accepted in IEEE Internet of Things Journal</blink></p> 
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
