--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
                     <div class="section-inner" id="con">
-                         <h2 class="heading">Latest News</h2> <img src="assets/images/news.png" alt="news" width="50" height="60">
+                         <h2 class="heading">Latest News</h2> <img src="assets/images/source.gif" alt="news" width="50" height="60">
                         <div class="content">
                             <ul class="list-unstyled">
 				<p style="color:red"> <blink>Paper accepted in IEEE Internet of Things Journal</blink></p> 
