--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                          <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
                         <div class="content">
                             <ul class="list-unstyled">
-				<p style="color:blue"> <blink>Paper accepted in IEEE Internet of Things Journal</blink></p> 
+				<p style="color:blue"> <blink> Two articles have been accepted for publication in IEEE Internet of Things Journal, I.F: 9.93</blink></p> 
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
