--- a/publication.html
+++ b/publication.html
@@ -120,7 +120,7 @@
 				<hr>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Adaptive Control Packet Broadcasting Scheme for Faster 6TiSCH Network Bootstrapping” in <b> IEEE Internet of Things Journal, IF=9.93</b>, Early Access, <a href="https://ieeexplore.ieee.org/document/9432409">&lt Link &gt</a> <blink style="color:red">New</blink> </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Autonomous Allocation and Scheduling of Minimal Cell in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>, Early Access,<a href="https://ieeexplore.ieee.org/document/9363324">&lt Link &gt</a> <a href="https://github.com/Alakesh1025/TACTILE"> &lt Code &gt</a>  <blink style="color:red">New</blink>  </p></li> 
-				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Transmission of control packets for Faster Formation of 6TiSCH Network” in <b> ACM Transactions on Internet of Things,</b> vol. 2, no. 1, pp. 1-29, 2021 <a href="https://dl.acm.org/doi/abs/10.1145/3430380">Link</a></p></li>       
+				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Transmission of control packets for Faster Formation of 6TiSCH Network” in <b> ACM Transactions on Internet of Things, IF=NA</b> vol. 2, no. 1, pp. 1-29, 2021 <a href="https://dl.acm.org/doi/abs/10.1145/3430380">Link</a></p></li>       
                                   <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Channel Condition Based Dynamic Beacon Interval for Faster Formation of 6TiSCH Network” in <b> IEEE Transactions on Mobile Computing, IF=5.11</b>, vol. 20, no. 7, pp. 2326–2337, 2021<a href="https://ieeexplore.ieee.org/document/9036988">Link</a></p></li>      
 			      </ol> 
 			      <ol class="gradient-list">
