--- a/achieve.html
+++ b/achieve.html
@@ -101,7 +101,7 @@
 				  <li><p class="subDetails">Received Travel grant to attend COMSNETS’2019 conference from conference organizer</p></li>
 				  <li><p class="subDetails">MHRD Scholarship for Ph.D (2018-till)</p></li>
 				  <li><p class="subDetails">Bagged second prize in Regional Innovators Conclave conducted by Government of Meghalaya for the SMART LIGHTING MODEL, Meghalaya, India 2017</p></li>
-				  <li><p class="subDetails">Securred university rank 2nd  during M-Tech (2014-2016)</p></li>	
+				  <li><p class="subDetails">Securred university rank 2  in M-Tech (2014-2016)</p></li>	
 				  <li><p class="subDetails">TEQIP-II Scholarship during M-Tech (2014-2016)</p></li>
 				  <li><p class="subDetails">Bagged first prize in line follower robotics competition, was held in Assam University, Silchar, India 2016</p></li>
 				   <li><p class="subDetails">Awarded with Anandaram Boruah Student Award, 2006 for performance of 10th standard board examination by State Government of Assam</p></li>
