--- a/publication.html
+++ b/publication.html
@@ -118,6 +118,7 @@
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journals</span></h3>
 				<hr>
+				 <li><p class="subDetails"><b> A. Kalita</b>, A. Brighente, M. Khatua, M. Conti, “Effect of DIS Attack in 6TiSCH Network Formation” in <b> IEEE Communication Letters, IF=3.436</b>,  Early Access, <a>&lt Link &gt</a>, <blink style="color:red">New</blink> </p></li>     
 				  <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “A Non-cooperative Gaming Approach for Control Packet Transmission in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  Early Access, <a href="https://ieeexplore.ieee.org/document/9504426">&lt Link &gt</a>, <blink style="color:red">New</blink> </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Adaptive Control Packet Broadcasting Scheme for Faster 6TiSCH Network Bootstrapping” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  vol. 8, no. 24, pp. 17395–17402, 2021, <a href="https://ieeexplore.ieee.org/document/9432409">&lt Link &gt</a>  </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Autonomous Allocation and Scheduling of Minimal Cell in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>, vol. 8, no. 15, pp. 12242-12250, 2021,<a href="https://ieeexplore.ieee.org/document/9363324">&lt Link &gt</a> <a href="https://github.com/Alakesh1025/TACTILE"> &lt Code &gt</a>    </p></li> 
