--- a/publication.html
+++ b/publication.html
@@ -118,6 +118,7 @@
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journals</span></h3>
 				<hr>
+				       <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “6TiSCH – IPv6 Enabled Open Stack IoT Network Formation: A Review” in <b> ACM Transactions on Internet of Things, IF=NA</b> </p></li>  
 				 <li><p class="subDetails"><b> A. Kalita</b>, A. Brighente, M. Khatua, M. Conti, “Effect of DIS Attack in 6TiSCH Network Formation” in <b> IEEE Communication Letters, IF=3.436</b>,  Early Access, <a href="https://ieeexplore.ieee.org/document/9724242">&lt Link &gt</a>, <blink style="color:red">New</blink> </p></li>     
 				  <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “A Non-cooperative Gaming Approach for Control Packet Transmission in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  Early Access, <a href="https://ieeexplore.ieee.org/document/9504426">&lt Link &gt</a> </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Adaptive Control Packet Broadcasting Scheme for Faster 6TiSCH Network Bootstrapping” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  vol. 8, no. 24, pp. 17395–17402, 2021, <a href="https://ieeexplore.ieee.org/document/9432409">&lt Link &gt</a>  </p></li>
