--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
 			    <div class="profile-content pull-left">
 				<h3 class="name">Alakesh Kalita </h3>
-				<h5 class="desc">Ph.D. Scholar <br> 
-						 Indian Institute of Technology Guwahati <br>
+				<h5 class="desc">Research Fellow <br> 
+						 National University of Singapore, Singapore <br>
 						 Email: alakesh.kalita1025@gmail.com<br>
 						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
