--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						  <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
 						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|<br>
 						 Ph: +65 88104452<br>
-						 [<a href="CV.pdf">Download CV</a>]</h5>
+						 [<a href="Alakesh_CV.pdf">Download CV</a>]</h5>
 						
 				    
 			    </div><!--//profile-->
