--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			    <div class="col-sm-6 col-md-5 col-lg-5" >
 				<img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
 			    <div class="profile-content pull-left">
-				<h3 class="name">Alakesh Kalita </h3>
+				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
 				<h5 class="desc">Research Fellow <br> 
 						 National University of Singapore, Singapore <br>
 						 Email: alakesh.kalita1025@gmail.com<br>
