--- a/publication.html
+++ b/publication.html
@@ -49,16 +49,17 @@
 			    <div class="col-sm-6 col-md-5 col-lg-5" >
 			      <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
 			    <div class="profile-content pull-left">
-				<h3 class="name">Alakesh Kalita </h3>
-				<h5 class="desc">Ph.D. Scholar <br> 
-						 Indian Institute of Technology Guwahati <br>
+				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
+				<h5 class="desc">Research Fellow <br> 
+						 National University of Singapore, Singapore <br>
 						 Email: alakesh.kalita1025@gmail.com<br>
+						 Email: alakesh@nus.edu.sg<br>
 						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
 						  <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
 						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|<br>
-						 Ph: 8402802840<br>
-						 [<a href="CV.pdf">Download CV</a>]</h5>
+						 Ph: +65 88104452<br>
+						 [<a href="Alakesh_CV.pdf">Download CV</a>]</h5>
 			    </div><!--//profile-->
 			    </div>
 			    <div class="col-sm-6 col-md-7 col-lg-7">
@@ -118,9 +119,9 @@
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journals</span></h3>
 				<hr>
-				       <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “6TiSCH – IPv6 Enabled Open Stack IoT Network Formation: A Review” in <b> ACM Transactions on Internet of Things, IF=NA</b> </p></li>  
-				 <li><p class="subDetails"><b> A. Kalita</b>, A. Brighente, M. Khatua, M. Conti, “Effect of DIS Attack in 6TiSCH Network Formation” in <b> IEEE Communication Letters, IF=3.436</b>,  Early Access, <a href="https://ieeexplore.ieee.org/document/9724242">&lt Link &gt</a>, <blink style="color:red">New</blink> </p></li>     
-				  <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “A Non-cooperative Gaming Approach for Control Packet Transmission in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  Early Access, <a href="https://ieeexplore.ieee.org/document/9504426">&lt Link &gt</a> </p></li>
+				       <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “6TiSCH – IPv6 Enabled Open Stack IoT Network Formation: A Review” in <b> ACM Transactions on Internet of Things, IF=NA</b> <a href="https://dl.acm.org/doi/10.1145/3536166">&lt Link &gt</a>, <blink style="color:red">New</blink> </p></li>  
+				 <li><p class="subDetails"><b> A. Kalita</b>, A. Brighente, M. Khatua, M. Conti, “Effect of DIS Attack in 6TiSCH Network Formation” in <b> IEEE Communication Letters, IF=3.436</b>, vol. 26, no. 5, pp. 1190-1193, 2022, <a href="https://ieeexplore.ieee.org/document/9724242">&lt Link &gt</a>, </p></li>     
+				  <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “A Non-cooperative Gaming Approach for Control Packet Transmission in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>, IF-11.7, vol. 9, no. 5, pp. 3954-3961, 2022, <a href="https://ieeexplore.ieee.org/document/9504426">&lt Link &gt</a> </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Adaptive Control Packet Broadcasting Scheme for Faster 6TiSCH Network Bootstrapping” in <b> IEEE Internet of Things Journal, IF=9.93</b>,  vol. 8, no. 24, pp. 17395–17402, 2021, <a href="https://ieeexplore.ieee.org/document/9432409">&lt Link &gt</a>  </p></li>
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Autonomous Allocation and Scheduling of Minimal Cell in 6TiSCH Network” in <b> IEEE Internet of Things Journal, IF=9.93</b>, vol. 8, no. 15, pp. 12242-12250, 2021,<a href="https://ieeexplore.ieee.org/document/9363324">&lt Link &gt</a> <a href="https://github.com/Alakesh1025/TACTILE"> &lt Code &gt</a>    </p></li> 
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Transmission of control packets for Faster Formation of 6TiSCH Network” in <b> ACM Transactions on Internet of Things, IF=NA</b> vol. 2, no. 1, pp. 1-29, 2021 <a href="https://dl.acm.org/doi/abs/10.1145/3430380">Link</a></p></li>       
