--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content" >
                             <p >Hi, I'm <a href="http://alakesh1025.github.io/">Alakesh Kalita</a>, 
-                              currently working as a Reserach Fellow in Electrical and Computer Engineering department of <a href="https://www.nus.edu.sg/">National University of Singapore, Singapore. Prior to this, I have received my Ph.D.  with the department of Computer Science and Engineering in 
+                              currently working as a Reserach Fellow in Electrical and Computer Engineering department of <a href="https://www.nus.edu.sg/">National University of Singapore, Singapore</a>. Prior to this, I have received my Ph.D.  with the department of Computer Science and Engineering in 
                               <a href="http://www.iitg.ac.in">Indian Institute of Technology Guwahati, India</a>, under the supervision of <a href="http://manaskhatua.github.io/">Dr. Manas Khatua</a>.  During my Ph.D., I worked on Adaptive Resource Allocation for Faster Formation of 6TiSCH IoT Network.
                               </p>    
          
