--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,17 @@
 			    <div class="col-sm-6 col-md-5 col-lg-5" >
 			      <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
 			    <div class="profile-content pull-left">
-				<h3 class="name">Alakesh Kalita </h3>
-				<h5 class="desc">Ph.D. Scholar <br> 
-						 Indian Institute of Technology Guwahati <br>
+				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
+				<h5 class="desc">Research Fellow <br> 
+						 National University of Singapore, Singapore <br>
 						 Email: alakesh.kalita1025@gmail.com<br>
+						 Email: alakesh@nus.edu.sg<br>
 						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
-						 <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
+						  <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
 						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|<br>
-						 Ph: 8402802840<br>
-						 [<a href="CV.pdf">Download CV</a>]</h5>
+						 Ph: +65 88104452<br>
+						 [<a href="Alakesh_CV.pdf">Download CV</a>]</h5>
 			    </div><!--//profile-->
 			    </div>
 			    <div class="col-sm-6 col-md-7 col-lg-7">
