--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
                          <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
                         <div class="content">
                             <ul class="list-unstyled">
+				<p style="color:blue"> Received the Innovative Student Projects Award 2022 from INAE for my Ph.D. Thesis.<blink> </blink></p>    
 				<p style="color:blue"> Defended my Ph.D. thesis on 17-May-2022<blink> </blink></p> 
-				 <p style="color:blue">Joined NUS, Singapore on 24-April-2022<blink> </blink></p>    
-				<p style="color:blue"> An article accepted in ACM TIOT,2022 <blink> </blink></p>     
-				<p style="color:blue"> I have published a report on Contiki-NG, TI IoT devices, and FIT IoT-LAB<blink> <a href="https://www.researchgate.net/publication/358138446_Contiki-NG_CC2650_IoT_devices_and_FIT_IoT-LAB">&lt Link &gt</a></blink></p>    
+				    
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
