--- a/achieve.html
+++ b/achieve.html
@@ -98,6 +98,7 @@
                         <div class="content">
                             <div class="item" >
                                 <ul>
+				   <li><p class="subDetails">I received the Innovative Student Projects Award 2022 from Indian National Academy of Engineering (INAE) for my Ph.D. Thesis.</p></li>	 
 				  <li><p class="subDetails">Received Travel grant to attend ICDCN’2020 conference from IIT Guwahati</p></li>
 				  <li><p class="subDetails">Received Travel grant to attend COMSNETS’2019 conference from conference organizer</p></li>
 				  <li><p class="subDetails">MHRD Scholarship for Ph.D (2018-till)</p></li>
