--- a/publication.html
+++ b/publication.html
@@ -133,6 +133,8 @@
 			      <ol class="gradient-list">
 				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
+				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra, M. Gurusamy, “Efficient Schemes for Improved Performance in 6TiSCH Networks” in IEEE INFOCOM WKSHPS: The 10th International Workshop on Computer and Networking Experimental Research using Testbeds (CNERT'2023), Accepted, <a href="">Link</a></p></li>     
+				      
                                 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Priority Alternation Scheme for Faster Formation of 6TiSCH Network” in 21st International Conference on Distributed Computing and Networking (ICDCN), Jan 2020, pp. 1-5, <a href="https://dl.acm.org/doi/abs/10.1145/3369740.3369779">Link</a></p></li>
                                 
 				<li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Faster Joining in 6TiSCH Network using Dynamic Beacon Interval,” in 11th International Conference on Communication Systems Networks (COMSNET), Jan 2019,pp. 454–457, <a href="https://ieeexplore.ieee.org/abstract/document/8711460/">Link</a></p></li>
