--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
 				<h5 class="desc">Research Fellow <br> 
 						 National University of Singapore, Singapore <br>
-						 Email: alakesh.kalita1025@gmail.com<br>
+						 Email: alakesh@ieee.org<br>
 						 Email: alakesh@nus.edu.sg<br>
 						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
