--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
 			    <div class="profile-content pull-left">
 				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
-				<h5 class="desc">Research Fellow <br> 
+				<h5 class="desc"><i class="fa fa-graduation-cap"> Research Fellow </i> <br> 
 						 National University of Singapore, Singapore <br>
 						 Email: alakesh@ieee.org<br>
 						 Email: alakesh@nus.edu.sg<br>
