--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 			    <div class="profile-content pull-left">
 				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
 				<h5 class="desc"><i class="fa fa-graduation-cap"> Research Fellow </i> <br> 
-						 National University of Singapore, Singapore <br>
-						 Email: alakesh@ieee.org<br>
-						 Email: alakesh@nus.edu.sg<br>
-						 <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
-						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn </a>|
+						 <i class="fa fa-institution"> National University of Singapore, Singapore </i> <br>
+						 <i class="fa fa-envelope"> alakesh@ieee.org </i><br>
+						 <i class="fa fa-envelope"> alakesh@nus.edu.sg </i> <br>
+						 <i class="fa fa-share-alt-square"> <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
+						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn  </a>|
 						  <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
-						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|<br>
-						 Ph: +65 88104452<br>
-						 [<a href="Alakesh_CV.pdf">Download CV</a>]</h5>
+						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|</i><br>
+						  <i class="fa fa-phone-square"> +65 88104452</i><br>
+						 <i class="fa fa-file-text">[<a href="Alakesh_CV.pdf">Download CV</a>]</i></h5>
 						
 				    
 			    </div><!--//profile-->
