--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			    <div class="profile-content pull-left">
 				<h3 class="name">Dr. Alakesh Kalita (Ph.D.) </h3>
 				<h5 class="desc"><i class="fa fa-graduation-cap"> Research Fellow </i> <br> 
-						 <i class="fa fa-institution"> National University of Singapore, Singapore </i> <br>
+						 <i class="fa fa-institution"> National University of Singapore</i> <br>
 						 <i class="fa fa-envelope"> alakesh@ieee.org </i><br>
 						 <i class="fa fa-envelope"> alakesh@nus.edu.sg </i> <br>
 						 <i class="fa fa-share-alt-square"> <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
