--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						 <i class="fa fa-share-alt-square"> <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
 						 <a href="https://www.linkedin.com/in/alakesh-kalita-39447055/">LinkedIn  </a>|
 						  <!--<a href="https://github.com/Alakesh1025/">GitHub </a>|<br>-->
-						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">ResearchGate</a>|</i><br>
+						 <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">RG</a>|</i><br>
 						  <i class="fa fa-phone-square"> +65 88104452</i><br>
 						 <i class="fa fa-file-text">[<a href="Alakesh_CV.pdf">Download CV</a>]</i></h5>
 						
