--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 				      </li>
 				     	
 				      <li><a href="contact.html">Contact me</a></li>
+		    		      <li class="toggle-container">
+                              			  <button id="light-toggle" title="Change theme"><i class="fas fa-moon"></i> <i class="fas fa-sun"></i></button>
+                         	     </li>
 				    </ul>
 				</nav>
 			    </div>
