--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
 			     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <ul class="nav navbar-nav">
 				      <li class="active"><a href="index.html" id="current">Home</a></li>
-				      <li ><a href="publication.html">Publications</a></li>
+				     
+		    		      <li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown">Research
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+						   <li ><a href="publication.html">Publications</a></li>
+						  <li><a href="project.html">Projects</a></li>
+						</ul>
+				      </li>
 				       <li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown">Academics
 					<span class="caret"></span></a>
