--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 
 
     <header class="header">
+	    <script src="jquery.js"></script> 
+		    <script> 
+		    $(function(){
+		      $("#includedContent").load("headerr.html"); 
+		    });
+    	    </script> 
         <div class="container">  
 
 			  <div class="row">
