--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>	
+    <script src="jquery.js"></script> 
+		    <script> 
+		    $(function(){
+		      $("#includedMyInfo").load("headerr.html"); 
+		    });
+    </script> 
     
 </head> 
 
 <body>
     <!-- ******HEADER****** --> 
     <header class="header">
-	    <script src="jquery.js"></script> 
-		    <script> 
-		    $(function(){
-		      $("#includedContent").load("headerr.html"); 
-		    });
-    	    </script> 
+	 <div id="includedMyInfo"></div>
         <div class="container">  
 			  <div class="row">
 			    <div class="col-sm-6 col-md-5 col-lg-5" >
