--- a/headerr.html
+++ b/headerr.html
@@ -29,7 +29,7 @@
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 						   <li ><a href="publication.html">Publications</a></li>
-						  <li><a href="project.html">Projects</a></li>
+						  <li><a href="projects.html">Projects</a></li>
 						</ul>
 				      </li>
 				       <li class="dropdown">
