--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,8 @@
     
     <div class="container sections-wrapper">
         <div class="row">
-            <div class="primary col-md-8 col-sm-12 col-xs-12">
+         <!--   <div class="primary col-md-8 col-sm-12 col-xs-12"> --> 
+	    <div class="primary col-md-12 col-sm-12 col-xs-12">    
                 <section class="about section">
                     <div class="section-inner" id="abt">
                         <h2 class="heading">Projects</h2>
