--- a/projects.html
+++ b/projects.html
@@ -126,7 +126,8 @@
 
 	</section><!--//section-->
 	</div><!--//primary-->
-	
+</div><!--//row-->
+</div><!--//masonry-- 	
 	
   <!-- ******FOOTER****** --> 
     <footer class="footer">
