--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="content" >
                             <p >Hi, I'm <a href="http://alakesh1025.github.io/">Alakesh Kalita</a>, 
                               currently working  with <a href="https://www.ece.nus.edu.sg/stfpage/elegm/">Dr. Mohan Gurusamy</a> as a Reserach Fellow in Electrical and Computer Engineering department of <a href="https://www.nus.edu.sg/">National University of Singapore, Singapore</a>. Prior to this, I have received my Ph.D.  with the department of Computer Science and Engineering in 
-                              <a href="http://www.iitg.ac.in">Indian Institute of Technology Guwahati, India</a>, under the supervision of <a href="http://manaskhatua.github.io/">Dr. Manas Khatua</a>.  During my Ph.D., I worked on <b> Adaptive Resource Allocation for Faster Formation of 6TiSCH IoT Network </b>.
+                              <a href="http://www.iitg.ac.in">Indian Institute of Technology Guwahati, India</a>, under the supervision of <a href="http://manaskhatua.github.io/">Dr. Manas Khatua</a>.  During my Ph.D., I worked on <b> Adaptive Resource Allocation for Faster Formation of 6TiSCH IoT Network </b>. My Ph.D. thesis is available <a href="http://gyan.iitg.ac.in/handle/123456789/2370">here</a>
                               </p>
 				
 		           <p> <b> I received the Innovative Student Projects Award 2022 (equivalent to best thesis) from Indian National Academy of Engineering (INAE) for my Ph.D. Thesis </b>. 	</p>	
