--- a/publication.html
+++ b/publication.html
@@ -61,6 +61,12 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
+				    
+				<ol class="gradient-list">
+				<h3> <span class="label label-default">Ph.D Thesis</span></h3>
+					<li><p class="subDetails"><b> A. Kalita</b>, “Adaptive Resource Allocation for Faster Formation of 6TiSCH IoT Network.” <a href="https://gyan.iitg.ac.in/handle/123456789/2370"><img src="assets/images/pdf.png" width="18" height="18"/></a> (<font color="red"> INAE's Best Thesis </font>)</p></li> 
+				<hr>
+				 </ol> 			
                                 
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journals</span></h3>
