--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- ******FOOTER****** --> 
     <footer class="footer">
         <div class="container text-center">
-                <small class="copyright"> &copy;2020 Alakesh Kalita. </small>
+                <small class="copyright"> &copy;2020-2023 Alakesh Kalita. </small>
         </div><!--//container-->
     </footer><!--//footer-->
  
