--- a/publication.html
+++ b/publication.html
@@ -103,6 +103,14 @@
 				  <li><p class="subDetails">A. Biswas, M. A. Hussain, and <b> A. Kalita</b>, “An improved congestion free modified fat tree network.” in 2016 International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES), Oct 2016, pp. 759-763. <a href="https://ieeexplore.ieee.org/abstract/document/7955541"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
 				 <!-- <li><p class="subDetails"><b> A. Kalita</b>, A. Biswas, Md. Anwar Hussain “ A Multipath Fault Tolerant Topology for Network-On-Chip”, accepted in Springer, International Conference on Computing and CommunicationSystems 2016 (I3CS2016)-2016.(Accepted but not published), </p></li>  -->
                               </ol> 
+
+
+			<ol class="gradient-list">
+				<h3> <span class="label label-default">Technical Report</span></h3>
+				<hr>	
+					<li><p class="subDetails"><b> A. Kalita</b>, “Contiki-NG, CC2650 IoT devices, and FIT IoT-LAB.” <a href="https://www.researchgate.net/publication/358138446_Contiki-NG_CC2650_IoT_devices_and_FIT_IoT-LAB/comments"><img src="assets/images/pdf.png" width="18" height="18"/></a> [<font color="red">INAE's Best Thesis</font>]</p></li> 
+				<hr>
+				 </ol> 			    
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->		
