--- a/headerr.html
+++ b/headerr.html
@@ -23,34 +23,34 @@
 			     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <ul class="nav navbar-nav">
 				      <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown">
-        Research <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li><a href="publication.html"><i class="fa fa-file-text"></i> Publications</a></li>
-        <li><a href="projects.html"><i class="fa fa-folder-open"></i> Projects</a></li>
-    </ul>
-</li>
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown">
-        Academics <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li><a href="education.html"><i class="fa fa-graduation-cap"></i> Education</a></li>
-        <li><a href="achieve.html"><i class="fa fa-trophy"></i> Achievements</a></li>
-    </ul>
-</li>
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown">
-        Experience <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li><a href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a></li>
-        <li><a href="training.html"><i class="fa fa-certificate"></i> Workshop & Training</a></li>
-    </ul>
-</li>
-<li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
+					<li class="dropdown">
+					    <a class="dropdown-toggle" data-toggle="dropdown">
+					        <i class="fa fa-search"></i> Research <span class="caret"></span>
+					    </a>
+					    <ul class="dropdown-menu">
+					        <li><a href="publication.html"><i class="fa fa-file-text"></i> Publications</a></li>
+					        <li><a href="projects.html"><i class="fa fa-folder-open"></i> Projects</a></li>
+					    </ul>
+					</li>
+					<li class="dropdown">
+					    <a class="dropdown-toggle" data-toggle="dropdown">
+					        Academics <span class="caret"></span>
+					    </a>
+					    <ul class="dropdown-menu">
+					        <li><a href="education.html"><i class="fa fa-graduation-cap"></i> Education</a></li>
+					        <li><a href="achieve.html"><i class="fa fa-trophy"></i> Achievements</a></li>
+					    </ul>
+					</li>
+					<li class="dropdown">
+					    <a class="dropdown-toggle" data-toggle="dropdown">
+					        Experience <span class="caret"></span>
+					    </a>
+					    <ul class="dropdown-menu">
+					        <li><a href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a></li>
+					        <li><a href="training.html"><i class="fa fa-certificate"></i> Workshop & Training</a></li>
+					    </ul>
+					</li>
+					<li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
 
 		    		    
 				    </ul>
