--- a/headerr.html
+++ b/headerr.html
@@ -34,7 +34,7 @@
 					</li>
 					<li class="dropdown">
 					    <a class="dropdown-toggle" data-toggle="dropdown">
-					        Academics <span class="caret"></span>
+					     <i class="fa fa-graduation-cap"></i>   Academics <span class="caret"></span>
 					    </a>
 					    <ul class="dropdown-menu">
 					        <li><a href="education.html"><i class="fa fa-graduation-cap"></i> Education</a></li>
@@ -43,7 +43,7 @@
 					</li>
 					<li class="dropdown">
 					    <a class="dropdown-toggle" data-toggle="dropdown">
-					        Experience <span class="caret"></span>
+					       <i class="fa fa-certificate"></i> Experience <span class="caret"></span>
 					    </a>
 					    <ul class="dropdown-menu">
 					        <li><a href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a></li>
