--- a/headerr.html
+++ b/headerr.html
@@ -43,7 +43,7 @@
 					</li>
 					<li class="dropdown">
 					    <a class="dropdown-toggle" data-toggle="dropdown">
-					       <i class="fa fa-certificate"></i> Experience <span class="caret"></span>
+					       <i class="fa fa-briefcase"></i> Experience <span class="caret"></span>
 					    </a>
 					    <ul class="dropdown-menu">
 					        <li><a href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a></li>
