--- a/headerr.html
+++ b/headerr.html
@@ -21,7 +21,8 @@
 			    </div>
 			    <div class="col-sm-6 col-md-7 col-lg-7">
 			     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <ul class="nav navbar-nav">
+			     <div class="topnav">     
+        		     <ul class="nav navbar-nav">
 				      <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
 					<li class="dropdown">
 					    <a class="dropdown-toggle" data-toggle="dropdown">
@@ -55,6 +56,7 @@
 		    		    
 				    </ul>
 				</nav>
+				</nav>   
 			    </div>
 			  </div>
 
