--- a/headerr.html
+++ b/headerr.html
@@ -22,7 +22,9 @@
 			    <div class="col-sm-6 col-md-7 col-lg-7">
 			     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 			     <div class="topnav">     
-				      <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
+				      <li class="active">
+					      <a href="index.html" id="current"><i class="fa fa-home"></i> Home</a>
+				      </li>
 					<li class="dropdown">
 					    <a class="dropdown-toggle" data-toggle="dropdown">
 					        <i class="fa fa-search"></i> Research <span class="caret"></span>
