--- a/headerr.html
+++ b/headerr.html
@@ -19,8 +19,9 @@
 				    
 			    </div><!--//profile-->
 			    </div>
+		<!--//		  
 			 <div class="col-sm-6 col-md-7 col-lg-7">
-		  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+		  <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
 		    <div class="topnav">     
 		      <ul class="nav navbar-nav">
 		        <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
@@ -54,8 +55,9 @@
 		        <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
 		      </ul>
 		    </div>
+		<!--//		  
 		  </nav>   
-		</div>
+		</div> -->
 
 			 
 
