--- a/headerr.html
+++ b/headerr.html
@@ -55,6 +55,9 @@
                     </ul>
                 </div>
             </nav>
+            <!-- Day/Night View Toggle -->
+            <label for="theme-toggle">Night Mode</label>
+            <input type="checkbox" id="theme-toggle">
         </div>
     </div>
 </div><!--//container-->
