--- a/headerr.html
+++ b/headerr.html
@@ -16,14 +16,14 @@
                     </i><br>
                     <i class="fa fa-phone-square"> +65 88104452</i><br>
                     <i class="fa fa-file-text">[<a href="Alakesh_CV.pdf">Download CV</a>]</i>
+                    <label for="theme-toggle">
+                        <span class="moon-icon"><i class="fas fa-moon"></i></span> <!-- Font Awesome half-moon icon -->
+                    </label>
+                    <input type="checkbox" id="theme-toggle">
                 </h5>
             </div><!--//profile-->
         </div>
-        <div class="col-sm-12 col-md-7 col-lg-7">
-            <!-- Day/Night View Toggle -->
-            <label for="theme-toggle">Night Mode</label>
-            <input type="checkbox" id="theme-toggle">
-            
+        <div class="col-sm-12 col-md-7 col-lg-7">            
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="topnav">
                     <ul class="nav navbar-nav">
