--- a/headerr.html
+++ b/headerr.html
@@ -15,7 +15,7 @@
                         <a href="https://www.researchgate.net/profile/Alakesh_Kalita3">RG</a>|
                     </i><br>
                     <i class="fa fa-phone-square"> +65 88104452</i><br>
-                    <i class="fa fa-file-text">[<a href="Alakesh_CV.pdf">Download CV</a>]</i>
+                    <i class="fa fa-file-text">[<a href="Alakesh_CV.pdf">Download CV</a>]</i> <br>
                     <label for="theme-toggle">
                         <span class="moon-icon"><i class="fas fa-moon"></i></span> <!-- Font Awesome half-moon icon -->
                     </label>
