--- a/headerr.html
+++ b/headerr.html
@@ -63,8 +63,8 @@
 <script>
   const names = [
     "Dr. Alakesh Kalita (Ph.D.)",
-    "डॉ. अलकेश कलिता (डी.ए)",
-    "ডঃ অলকেশ কলিতা (ডি.এ)"
+    "डॉ. अलकेश कलिता",
+    "ডঃ অলকেশ কলিতা"
   ];
 
   let currentIndex = 0;
