--- a/headerr.html
+++ b/headerr.html
@@ -97,7 +97,7 @@
     }
   }
 
-  intervalId = setInterval(deleteLetter, 100); // Start typing
+  intervalId = setInterval(startTyping, 0); // Start typing
 </script>
 
 
